--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,5 +2,45 @@
     "language": "English",
     "@language": {
         "description":"The current Language"
-    }
+    },
+    "diaryTab": "Diary",
+    "settingTab":"Setting",
+    "timeLineTab":"Timeline",
+    "boardTab":"Board",
+    "general":"General",
+    "passcode":"Passcode",
+    "backUp":"Backup and restore",
+    "reminderTime":"Reminder time",
+    "startOfTheWeek":"Start of the week",
+    "monday":"Monday",
+    "tuesday":"Tuesday",
+    "wednesday":"Wednesday",
+    "thursday":"Thursday",
+    "friday":"Friday",
+    "saturday":"Saturday",
+    "sunday":"Sunday",
+    "language":"Language",
+    "changeTheme":"Change theme",
+    "other":"Other",
+    "privacyPolicy":"Privacy Policy",
+    "termsOfConditions":"Terms & Conditions",
+    "feedback":"Feedback",
+    "aboutUs":"About us",
+    "english":"English",
+    "vietnamese":"Vietnamese",
+    "moodBoard":"Mood Board",
+    "monthly":"Monthly",
+    "annual":"Annual",
+    "moodFlow":"Mood Flow",
+    "moodBar":"Mood Bar",
+    "noRecord":"No record",
+    "youCannotRecordThefuture":"You cannot record the future",
+    "pleaseRecordYourMood":"Please record your mood",
+    "howWasYourDay":"How was your day?",
+    "writeAboutToday":"Write about today",
+    "yourPhotos":"Your photos",
+    "writeSomething":"Write something...",
+    "theDiaryHasBeenRecorded":"The diary has been recorded",
+    "coin":"100 coin",
+    "claim":"Claim"
 }
