--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -50,5 +50,6 @@
     "pinNotMatch":"PIN does not match",
     "pinSet":"PIN has been set",
     "ok":"OK",
-    "enterPin":"Enter PIN"
+    "enterPin":"Enter PIN",
+    "share":"Share"
 }
