change board screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,7 +30,7 @@
     "vietnamese":"Vietnamese",
     "moodBoard":"Mood Board",
     "monthly":"Monthly",
-    "annual":"Annual",
+    "seeAll":"See all",
     "moodFlow":"Mood Flow",
     "moodBar":"Mood Bar",
     "noRecord":"No record",
