--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -30,7 +30,7 @@
     "vietnamese":"Tiếng Việt",
     "moodBoard":"Bảng tâm trạng",
     "monthly":"Tháng",
-    "annual":"Năm",
+    "seeAll":"Xem tất cả",
     "moodFlow":"Theo dõi tâm trạng",
     "moodBar":"Thanh tâm trạng",
     "noRecord":"Không dữ liệu",
