--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -58,8 +58,13 @@
     "addTitle":"Thêm tiêu đề cho chủ đề này",
     "write":"Viết",
     "content":"Nội dung",
+    "darkMode":"Tối",
+    "lightMode":"Sáng",
+    "systemMode":"Tự động",
     "themeStore":"Cửa hàng giao diện",
     "coin":"xu",
+    "apply":"Áp dụng",
+    "background":"Giao diện",
     "nothing":"Ngày này chưa viết gì hết 🙁",
     "buySuccess":"Mua thành công",
     "owned":"Đã sở hữu",
