edit + delete category

--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -66,6 +66,9 @@
     "apply":"Áp dụng",
     "background":"Giao diện",
     "nothing":"Ngày này chưa viết gì hết 🙁",
+    "deleteDiary":"Bạn có chắc chắc muốn\nxoá nhật kí này?",
+    "deleteCategory":"Bạn có chắc chắc muốn\nxoá chủ đề này?",
+    "undone":"Hành động này không thể quay lại",
     "buySuccess":"Mua thành công",
     "owned":"Đã sở hữu",
     "buyFailed":"Bạn cần thêm {numCoin} xu để mua giao diện",
