--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -64,6 +64,9 @@
     "darkMode":"Dark mode",
     "lightMode":"Light mode",
     "systemMode":"System mode",
+    "deleteDiary":"Are you sure you want to\ndelete this diary?",
+    "deleteCategory":"Are you sure you want to\ndelete this category?",
+    "undone":"This action cannot be undone",
     "nothing":"Nothing is written for this day 🙁",
     "owned":"Owned",
     "background":"Background",
